--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
-file.reference.encog-core-3.2.0.jar=lib/encog-core-3.2.0.jar
+file.reference.ejml-0.24.jar=lib/ejml-0.24.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-math3-3.0.jar}:\
-    ${file.reference.encog-core-3.2.0.jar}
+    ${file.reference.ejml-0.24.jar}:\
+    ${file.reference.commons-math3-3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
