--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
 file.reference.ejml-0.24.jar=lib/ejml-0.24.jar
+file.reference.jchart2d-3.2.2.jar=lib/jchart2d-3.2.2.jar
+file.reference.rlpark.jar=lib/rlpark.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ejml-0.24.jar}:\
-    ${file.reference.commons-math3-3.0.jar}
+    ${file.reference.commons-math3-3.0.jar}:\
+    ${file.reference.rlpark.jar}:\
+    ${file.reference.jchart2d-3.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
