--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,20 +30,22 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
-file.reference.ejml-0.24.jar=lib/ejml-0.24.jar
+file.reference.EJML.jar=lib/EJML.jar
 file.reference.encog-core-3.2.0.jar=lib/encog-core-3.2.0.jar
 file.reference.jchart2d-3.2.2.jar=lib/jchart2d-3.2.2.jar
+file.reference.mtj-1.0-snapshot.jar=lib/mtj-1.0-snapshot.jar
 file.reference.rlpark.jar=lib/rlpark.jar
 file.reference.somtoolbox.jar=lib/somtoolbox.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ejml-0.24.jar}:\
     ${file.reference.commons-math3-3.0.jar}:\
+    ${file.reference.EJML.jar}:\
     ${file.reference.rlpark.jar}:\
     ${file.reference.jchart2d-3.2.2.jar}:\
     ${file.reference.somtoolbox.jar}:\
-    ${file.reference.encog-core-3.2.0.jar}
+    ${file.reference.encog-core-3.2.0.jar}:\
+    ${file.reference.mtj-1.0-snapshot.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
