--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,23 +29,29 @@ dist.jar=${dist.dir}/beccaj.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
+file.reference.commons-math3-3.3.jar=lib/commons-math3-3.3.jar
 file.reference.EJML.jar=lib/EJML.jar
 file.reference.encog-core-3.2.0.jar=lib/encog-core-3.2.0.jar
+file.reference.javacl-1.0-20140610.081505-79-shaded.jar=lib/javacl-1.0-20140610.081505-79-shaded.jar
+file.reference.javacl-blas-1.0.0-RC3.jar=lib/javacl-blas-1.0.0-RC3.jar
 file.reference.jchart2d-3.2.2.jar=lib/jchart2d-3.2.2.jar
 file.reference.mtj-1.0-snapshot.jar=lib/mtj-1.0-snapshot.jar
 file.reference.rlpark.jar=lib/rlpark.jar
 file.reference.somtoolbox.jar=lib/somtoolbox.jar
+file.reference.ujmp-complete-0.2.5.jar=lib/ujmp-complete-0.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-math3-3.0.jar}:\
     ${file.reference.EJML.jar}:\
+    ${file.reference.commons-math3-3.3.jar}:\
     ${file.reference.rlpark.jar}:\
     ${file.reference.jchart2d-3.2.2.jar}:\
     ${file.reference.somtoolbox.jar}:\
     ${file.reference.encog-core-3.2.0.jar}:\
-    ${file.reference.mtj-1.0-snapshot.jar}
+    ${file.reference.mtj-1.0-snapshot.jar}:\
+    ${file.reference.javacl-1.0-20140610.081505-79-shaded.jar}:\
+    ${file.reference.javacl-blas-1.0.0-RC3.jar}:\
+    ${file.reference.ujmp-complete-0.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,7 +75,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=becca.world.Grid1D
+main.class=becca.world.Grid2DRelative
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -77,10 +83,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-ea  -XX:+UseCompressedOops  -XX:+AggressiveOpts
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
